<resources>

    <string name="saveAndBack" translatable="true">Сохранить</string>
    <string name="Back" translatable="true">Назад</string>

    <string name="mass" translatable="true">кг.</string>
    <string name="rub" translatable="true">руб.</string>
    <string name="distanceValue" translatable="true">км.</string>

    <string name="material" translatable="true">Материал</string>
    <string name="work" translatable="true">Трудозатраты</string>
    <string name="equipment" translatable="true">Оборудование</string>
    <string name="rent" translatable="true">Аренда</string>
    <string name="logistic" translatable="true">Логистика</string>
    <string name="other" translatable="true">Прочее</string>
    <string name="markup" translatable="true">Наценка</string>
    <string name="result" translatable="true">Итог</string>


    <string name="distance" translatable="true">Расстояние</string>

    <string name="Calculate" translatable="true">Расчет стоимости</string>

    <string name="CostDistance" translatable="true">Цена за километр пути</string>
    <string name="SettingsHead" translatable="true">Изменить параметры</string>
    <string name="CostRent" translatable="true">Цена помещения в месяц</string>
    <string name="CostForMass" translatable="true">руб за кг.</string>
    <string name="Version">1.1.1</string>
    <string name="NumberExample">123456</string>
    <string name="ChoiceMaterial" translatable="true">Выбор материала</string>

    <string name="MaterialVar1" translatable="true">Сталь</string>
    <string name="MaterialVar2" translatable="true">Алюминий</string>
    <string name="MaterialVar3" translatable="true">Титан</string>
    <string name="MaterialVar4" translatable="true">Медь</string>




    <string name="timeValue" translatable="true">час.</string>
    <string name="days" translatable="true">дней</string>
    <string name="OtherCost" translatable="true">Прочая затрата</string>
    <string name="delete" translatable="true">Удалить</string>
    <string name="redact" translatable="true">Редактировать</string>
    <string name="changelog">ChangeLog</string>


    <integer name="steel_price">40</integer>
    <integer name="aluminum_price">40</integer>
    <integer name="copper_price">40</integer>
    <integer name="titanium_price">40</integer>
    <string name="app_name" translatable="true">RanteksCalc</string>
    <string name="cost_for_kg">Цена за кг</string>


    <!-- Notifications -->
    <string name="notifications_data_push_channel_id" translatable="false">Igx3mVkVohnJ3tgnMp8WMgn23c7zm2f3</string>
    <string name="notifications_data_push_channel_name" translatable="false">Data push channel</string>


</resources>