<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainMenu">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:padding="10sp"
            app:srcCompat="@android:drawable/ic_menu_help"
            android:layout_gravity="end"
            android:background="@drawable/shape_input_field"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_logo_fav_temp" />

        <LinearLayout
            android:elevation="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_background"
            android:layout_marginTop="90dp">


            <Button

                android:id="@+id/btnCalculate"
                android:layout_width="292dp"
                android:layout_height="97dp"
                android:layout_gravity="center"
                android:onClick="CalculatePage"
                android:background="@android:color/transparent"
                style="@style/VariantText"
                android:text="@string/Calculate"
                tools:ignore="OnClick" />





        </LinearLayout>


        <LinearLayout
            android:elevation="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_background"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="292dp"
                android:layout_height="97dp"
                android:layout_gravity="center"
                style="@style/VariantText"
                android:background="@android:color/transparent"
                android:onClick="settingsPage"
                android:text="@string/SettingsHead"
                tools:ignore="OnClick" />

        </LinearLayout>

        <Button
            style="@style/BaseText"
            android:background="@android:color/transparent"
            android:id="@+id/btnChangeLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Version"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginTop="150dp"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
