<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rent">



    <TextView
        android:id="@+id/TitleTextMarkup"
        android:layout_width="340dp"
        android:layout_height="97dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_button_back_background"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/rent"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button_background"
        android:elevation="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/shape_button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:hint="@string/NumberExample"
                android:id="@+id/editTextRent"
                android:layout_width="240dp"
                android:layout_height="67dp"
                android:autofillHints="creditCardExpirationDate"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:elevation="@dimen/cardview_default_radius"
                android:background="@drawable/shape_input_field"
                android:ems="10"
                style="@style/HeaderTex"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="102dp"
                android:layout_height="90dp"
                style="@style/HeaderTex"
                android:gravity="center"
                android:text="@string/rub"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       style="@style/BaseText"
        android:text="@string/CostRent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />


    <LinearLayout
        android:elevation="30sp"
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_button_back_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="279dp"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            style="@style/VariantText"
            android:onClick="saveRent"
            android:text="@string/saveAndBack"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>