<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_button_back_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:elevation="30sp"
        android:id="@+id/TitleTextSettings"
        android:drawableLeft="@drawable/ic_go_back_arrow"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/nunito_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="btnBack"
        android:backgroundTint="@color/WhiteModeBack"
        android:text="@string/SettingsHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/BaseCalculateModule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <Button
            android:id="@+id/Eror"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            style="@style/BaseText"
            android:text="@string/other"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />
    </LinearLayout>

    <LinearLayout
        style="@style/BaseCalculateModule"
        android:id="@+id/linearLayout13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

        <Button
            android:id="@+id/btnLogistic"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            style="@style/BaseText"
            android:onClick="btnLogistic"
            android:text="@string/logistic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />
    </LinearLayout>


    <LinearLayout
        style="@style/BaseCalculateModule"
        android:id="@+id/linearLayout12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

        <Button
            android:id="@+id/btnEquipment"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            style="@style/BaseText"
            android:text="@string/equipment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />
    </LinearLayout>


    <LinearLayout
        style="@style/BaseCalculateModule"
        android:id="@+id/linearLayout15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <Button
            android:id="@+id/btnWork"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:onClick="btnWork"
            style="@style/BaseText"
            android:text="@string/work"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout14"
        style="@style/BaseCalculateModule"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextSettings">

        <Button
            android:id="@+id/btnMaterial"
            style="@style/BaseText"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/material"
            android:onClick="btnMaterialCalcualte"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>